# Azure-Based-PII-Redactor

./: .env.example  .gitignore  DEVELOPMENT.md  ENHANCED_SYSTEM_README.md  Makefile  QUICK_START.md  README.md  advanced_dashboard.py  azure_pii_detector.py  batch_process.py  column_config.py  column_config_gui.py  confidence_scoring.py  debug_detection.py  detailed_debug.py  enhanced_ml_detector.py  enhanced_pii_redactor_app.py  enhanced_review_system.py  entity_offset_tracker.py  fix_gui_detection_display.py  gpt_validator.py  gui_flow_debug.py  interactive_pii_reviewer.py  performance_monitor.py  pii_redactor_web.py  pyproject.toml  requirements.txt  run_smart_detector.py  setup.py  smart_zendesk_detector.py  test_azure_connection.py  test_detection_performance.py  test_env_loading.py
redactify/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.js  package-lock.json  package.json  preload.js  test_zendesk_data.csv
redactify/backend/: check_training.go  go.mod  go.sum
redactify/backend/cmd/server/: main.go
redactify/backend/internal/api/: routes.go
redactify/backend/internal/db/: db.go
redactify/backend/internal/pii/: azure.go  column_config.go  confidence_scoring.go  detector.go  file_processor.go  gpt_validator.go  patterns.go
redactify/backend/pkg/config/: config.go
redactify/frontend/: package-lock.json  package.json  tailwind.config.js
redactify/frontend/public/: index.html  manifest.json
redactify/frontend/src/: App.tsx  index.css  index.tsx  react-app-env.d.ts
redactify/frontend/src/components/: ColumnSettings.tsx  (+5 more)
(+14 files in other folders)
